k8s-playground/trilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
  labels:
    app: trilium
    environment: playground
