k8s-playground/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: trilium
  labels:
    app: trilium
spec:
  type: ClusterIP
  selector:
    app: trilium
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
